# Upsilon.py

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
upsilon_py/: __init__.py  __main__.py  main.js
